Cambios para evitar seleccion vacia

--- a/password_generator/index.html
+++ b/password_generator/index.html
@@ -12,9 +12,10 @@
     <div class="container bg-container">
         <h1 class="title skin-title">Password Generator</h1>
         <div class="password-container bg-password-container">
-            <span class="password" id="password_generated">12312312</span>
+            <span class="password" id="password_generated"></span>
             <button class="btn btn-paste far fa-clipboard"></button>
         </div>
+        <div class="error">Debe seleccionar al menos un caracter de generación</div>
         <div class="input-container">
             <span class="text">Password Length</span>
             <input type="number" id="input-length" value="12">
