--- a/recipe_app/index.html
+++ b/recipe_app/index.html
@@ -32,17 +32,17 @@
             </ul>
         </div>
         <div class="meals">
-            <span class="random">
-                Random Recipe
-            </span>
             <div class="meal">
                 <div class="meal-header">
-                    <img src="" alt="">
+                    <span class="random">
+                        Random Recipe
+                    </span>
+                    <img src="https://picsum.photos/600" alt="">
                 </div>
                 <div class="meal-body">
                     <h4>Traditional Food</h4>
-                    <button>
-                        <i class="far fa-heart"></i>
+                    <button class="active">
+                        <i class="fas fa-heart"></i>
                     </button>
                 </div>
             </div>
