--- a/recipe_app/index.html
+++ b/recipe_app/index.html
@@ -1,52 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>Recipes App</title>
 </head>
+
 <body>
     <div class="mobile-container">
         <header>
-            <input type="text" name="" id="">
+            <button class="btn_menu"><i class="fas fa-bars"></i></button>
+            <input type="text" name="" id="txt_search" placeholder="Search...">
             <button id="search"><i class="fas fa-search"></i></button>
         </header>
         <div class="fav-container">
-            <h3>Favorite Meals</h3>
             <ul class="fav-meals">
                 <li>
-                    <img src="https://picsum.photos/200" alt="">
-                    <span>food 1</span>
+                    <a href="">
+                        <img src="images/bread.jpg" alt="">
+                        <span>Bread</span>
+                    </a>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/200" alt="">
-                    <span>food 2</span>
+                    <a href="">
+                        <img src="images/chicke_story.jpg" alt="">
+                        <span>Chicken</span>
+                    </a>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/200" alt="">
-                    <span>food 3</span>
+                    <a href="">
+                        <img src="images/dessert.jpg" alt="">
+                        <span>Dessert</span>
+                    </a>
+                <a href=""></li></a>
+                <li>
+                    <a href="">
+                        <img src="images/pasta.jpg" alt="">
+                        <span>Pasta</span>
+                    </a>
                 </li>
+                
+                <li>
+                    <a href="">
+                        <img src="images/salad.jpg" alt="">
+                        <span>Salad</span>
+                    </a>
+                </li>
+                
             </ul>
         </div>
-        <div class="meals">
-            <div class="meal">
-                <div class="meal-header">
-                    <span class="random">
-                        Random Recipe
-                    </span>
-                    <img src="https://picsum.photos/600" alt="">
+        <div class="main-content">
+
+            <div class="personalize">
+                <div class="title">
+                    <div class="container-close">
+                        <h3>Personalize</h3>
+                        <span>your recommendations</span>
+                    </div>
+                    <button class="fa fa-times close-personalize"></button>
                 </div>
-                <div class="meal-body">
-                    <h4>Traditional Food</h4>
-                    <button class="active">
-                        <i class="fas fa-heart"></i>
-                    </button>
+                <div class="container-button">
+                    <button>Start personalizing</button>
+                </div>
+            </div>
+            <div class="meals">
+                <div class="meal">
+                    <div class="meal-header">
+                        <span class="random">
+                            Recipe of the Day
+                        </span>
+                        <img src="images/chicken.jpg" alt="">
+                    </div>
+                    <div class="meal-body">
+                        <h4>Chicken spicy</h4>
+                        <button class="active">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="far fa-star" aria-hidden="true"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
