style: 🎨 formante code index

--- a/recipe_app/index.html
+++ b/recipe_app/index.html
@@ -37,21 +37,22 @@
                         <img src="images/dessert.jpg" alt="">
                         <span>Dessert</span>
                     </a>
-                <a href=""></li></a>
+                    <a href="">
+                </li></a>
                 <li>
                     <a href="">
                         <img src="images/pasta.jpg" alt="">
                         <span>Pasta</span>
                     </a>
                 </li>
-                
+
                 <li>
                     <a href="">
                         <img src="images/salad.jpg" alt="">
                         <span>Salad</span>
                     </a>
                 </li>
-                
+
             </ul>
         </div>
         <div class="main-content">
