sidebar and logo

--- a/recipe_app/index.html
+++ b/recipe_app/index.html
@@ -13,6 +13,35 @@
 
 <body>
     <div class="mobile-container">
+        <div class="sidebar_menu">
+            <button type="button" class="close_sidebar_menu fa fa-times"></button>
+            <ul>
+                <li>
+                    <a href="">
+                        <i class="fas fa-home"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fas fa-utensils"></i>
+                        <span>Recipes</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fas fa-heart"></i>
+                        <span>Favorites</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fas fa-user"></i>
+                        <span>Profile</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <header>
             <button class="btn_menu"><i class="fas fa-bars"></i></button>
             <input type="text" name="" id="txt_search" placeholder="Search...">
@@ -91,6 +120,7 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
