animation for search and change for logo and reverse

--- a/recipe_app/index.html
+++ b/recipe_app/index.html
@@ -44,8 +44,12 @@
         </div>
         <header>
             <button class="btn_menu"><i class="fas fa-bars"></i></button>
-            <input type="text" name="" id="txt_search" placeholder="Search...">
+            <div class="logo-input">
+                <img id="logo" src="images/logo3.jpg" alt="" srcset="">
+                <input type="text" name="" id="txt_search" placeholder="Search..." class="hide">
+            </div>
             <button id="search"><i class="fas fa-search"></i></button>
+            <button id="close_search" class="hide"><i class="fas fa-times "></i></button>
         </header>
         <div class="fav-container">
             <ul class="fav-meals">
