add styles for button add note

--- a/notes_app/index.html
+++ b/notes_app/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <button id="btn_add_note">Add note</button>
+        <button id="btn_add_note"><i class="fas fa-plus"></i> Add note</button>
         <div id="container-notes" class="container-notes">
             
         </div>
