--- a/drawing_app/index.html
+++ b/drawing_app/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Drawing App</title>
 </head>
-<body onload="draw();">
+
+<body>
     <div class="container">
         <canvas id="stockGraph" width="400" height="400">
-            
-          </canvas>
+
+        </canvas>
+        <div class="options">
+            <button id="btn_decrease_size">-</button>
+            <span id="btn_set_size">30</span>
+            <button id="btn_increase_size">+</button>
+            <input id="btn_change_color" type="color"/>
+            <button class="clear">🗑️</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
-    
+
 </body>
+
 </html>
