add feature clear canvas and modify size of canvas

--- a/drawing_app/index.html
+++ b/drawing_app/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <canvas id="stockGraph" width="400" height="400">
+        <canvas id="stockGraph" width="800" height="800">
 
         </canvas>
         <div class="options">
@@ -18,7 +18,7 @@
             <span id="btn_set_size">30</span>
             <button id="btn_increase_size">+</button>
             <input id="btn_change_color" type="color"/>
-            <button class="clear">🗑️</button>
+            <button id="btn_clear_canvas" class="clear">🗑️</button>
         </div>
     </div>
 
